tests/ui-nightly/diagnostic-not-implemented-unaligned.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::Unaligned` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-unaligned.rs:16:23
   |
16 |     takes_unaligned::<NotZerocopy>();
   |                       ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zerocopy::Unaligned` is not implemented for `NotZerocopy`
  --> tests/ui-nightly/../include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(Unaligned)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::Unaligned`:
             ()
             AtomicBool
             AtomicI8
             AtomicU8
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             Isize<O>
             ManuallyDrop<T>
             MaybeUninit<T>
             NonZero<i8>
             NonZero<u8>
             Option<NonZero<i8>>
             Option<NonZero<u8>>
             PhantomData<T>
             ReadOnly<T>
             U128<O>
             U16<O>
             U32<O>
             U64<O>
             Unalign<T>
             UnsafeCell<T>
             Usize<O>
             Wrapping<T>
             [T; N]
             [T]
             bool
             i8
             str
             u8
note: required by a bound in `takes_unaligned`
  --> tests/ui-nightly/diagnostic-not-implemented-unaligned.rs:19:23
   |
19 | fn takes_unaligned<T: Unaligned>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_unaligned`
